[package]
name = "caminos"
version = "0.1.0"
authors = ["Cristóbal Camarero <cristobal.camarero@unican.es>"]
edition = "2018"
description = "A modular interconnection network simulator."
publish = true
keywords = ["simulator"]
documentation = "https://docs.rs/caminos-lib"
readme = "README.md"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
rand = "0.4"
caminos-lib = "0.1.0"
#caminos-lib = { path = "../caminos-lib" }
